# Env-example-generator

./: .gitignore  Cargo.toml  README.md
src/: argc.rs  error.rs  main.rs
tests/: cli_tests.rs  test.env  test.env.example
